--- a/views/tema/tema-nuevo.hbs
+++ b/views/tema/tema-nuevo.hbs
@@ -54,7 +54,7 @@
                         </div>
                         <div class="col">
                             <label for="tipoBox" class="form-label">Categoría</label>
-                            <select class="custom-select" name="tipoBox" id="tipoBox" value=1>
+                            <select class="custom-select" name="tipoBox" id="tipoBox">
                                 <option value="Investigación">Investigación</option>
                                 <option value="Presentación">Presentación</option>
                                 <option value="Proyecto">Proyecto</option>
@@ -64,6 +64,7 @@
                                 <option value="Cuadro Sinoptico">Cuadro Sinoptico</option>
                                 <option value="Mapa Mental">Mapa Mental</option>
                                 <option value="Ejercicios">Ejercicios</option>
+                                <option value="Examen">Examen</option>
                                 <option value="Otros">Otros</option>
                             </select>
                         </div>
