--- a/views/actividad/actividad-nuevo.hbs
+++ b/views/actividad/actividad-nuevo.hbs
@@ -1,6 +1,14 @@
 <title>Agregar actividad a tema- Seguimiento de Estudiantes</title>
 
 <div class="container bg-light">
+    {{#each errors}}
+        <div class="alert alert-warning alert-dismissible fade show" role="alert">
+            {{text}}.
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+    {{/each}}
     <div class="row m-2 p-2">
         <h3>Agregar actividades</h3>
     </div>
