Agregadas librerías para graficación de datos

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -16,6 +16,8 @@
     <script src="/js/bootstrap4-editable/js/bootstrap-editable.js"></script>
     <script src="/js/bootstrap-table.js"></script>
     <script src="/js/extensions/editable/bootstrap-table-editable.js"></script>
+    <script src="/js/raphael.js"></script>
+    <script src="/js/morris.js"></script>
     <script src="/js/popover-helper.js"></script>
     <script src="/js/bs-custom-file-input.js"></script>
 
