--- a/views/grupo/vista-inicio-grupo.hbs
+++ b/views/grupo/vista-inicio-grupo.hbs
@@ -22,5 +22,38 @@
     </ul>
 </div>
 <div class="row m-2 p-2">
-    <h2 class="">{{grupo.dataValues.clave}} - {{grupo.dataValues.asignatura}}</h2>
+
+    <nav id="sideBar" class="col-md-3 col-lg-2 d-md-block bg-light sidebar navbar-nav-scroll">
+        <div class="sidebar-sticky pt-3">
+            <h4 class="sidebar-heading d-flex justify-content-between align-items-center text-muted">
+                Temas</h4>
+            <ul class="nav flex-column">
+
+                {{#each temas}}
+                    <li class="nav-item"><a class="nav-link"
+                                            href="/grupo/calificaciones/{{../idgrupo}}/{{dataValues.id}}/0"><i
+                            class="bi-book-half"></i><strong> {{dataValues.nombre}}</strong></a></li>
+                {{/each}}
+            </ul>
+        </div>
+    </nav>
+
+    <main class="col p-2 m-1">
+        <h2 class="">{{grupo.dataValues.clave}} - {{grupo.dataValues.asignatura}}</h2>
+        <div class="card" style="width: 18rem;">
+            <div id="indiceReprobacion" style="height: 250px;"></div>
+            <div class="card-body">
+                <p class="card-text">Indice de reprobación</p>
+            </div>
+        </div>
+    </main>
+
 </div>
+<script>
+    new Morris.Donut({
+        element: "indiceReprobacion",
+        data:[{label:"Reprobados", value:20},{label:"Aprobados", value:10}],
+        formatter: function (y) {return y+ "%"},
+        resize: true,
+    })
+</script>
