--- a/views/actividad/actividad-calificar-individual.hbs
+++ b/views/actividad/actividad-calificar-individual.hbs
@@ -19,10 +19,11 @@
             <input type="hidden" name="_method" value="PUT">
             <input type="hidden" id="valorTabla" name="valorTabla" value="{{listaFormateada}}">
             <div class="col-auto">
-                <table id="table" data-toggle="table" data-toolbar="#toolbar" data-click-to-select="false"
+B                <table id="table" class="table" data-toggle="table" data-toolbar="#toolbar" data-click-to-select="false"
                        data-search="true"
                        data-search-text="" data-filter-control="true" name="table" data-editable="true">
                     <thead>
+                    <tr>
                         <th data-field="clave" data-sorteable="false">No. Control</th>
                         <th data-field="nombre" data-sorteable="true">Nombre</th>
                         <th data-field="calificacion" data-sorteable="true" data-editable="true" data-editable-type="number" data-editable-min="0"  data-editable-max="100">Calificación</th>
