--- a/views/alumno/vista-grupo-alumnos.hbs
+++ b/views/alumno/vista-grupo-alumnos.hbs
@@ -161,6 +161,12 @@
                     </table>
                 </div>
             </div>
+
+            <div class="row">
+                <div class="col">
+
+                </div>
+            </div>
             <!--Modal para desasociar un alumno de un grupo-->
             <form action="/alumnos/eliminar-alumno/{{idgrupo}}/{{alumno.dataValues.id}}?_method=DELETE"
                   method="POST">
