--- a/views/calificacion/vista-grupo-calificaciones.hbs
+++ b/views/calificacion/vista-grupo-calificaciones.hbs
@@ -30,7 +30,9 @@
 
 <div class="row m-2 p-2 flex-grow-1 flex-shrink-0">
     <nav id="sideBar" class="col-md-3 col-lg-2 d-md-block bg-light sidebar navbar-nav-scroll">
-        <div class="sidebar-sticky pt-3">
+        <div class="sidebar-sticky ">
+            <h4 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
+                Temas</h4>
             <ul class="nav flex-column">
                 <h4 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
                     Temas</h4>
@@ -43,40 +45,39 @@
         </div>
     </nav>
 
+    <!--col-md-9 ml-sm-auto col-lg-10 px-md-4-->
+    <main class="col col-md col-xl col-sm col-lg" role="main">
+        <div id="toolbar">
+            <h3>Tema: {{tema.dataValues.nombre}}</h3>
+        </div>
+        <div class="row">
+            <div class="col navbar-nav-scroll">
+                <input type="hidden" id="valorTabla" name="valorTabla" value="{{listaFormateada}}">
 
-    <main class="col-md-9 ml-sm-auto col-lg-10 px-md-4" role="main">
-        <div class="row-cols-1">
-            <div class="col-auto d-flex flex-row-reverse p-3">
-                <div id="toolbar">
-                    <h3>{{tema.dataValues.nombre}}</h3>
-                </div>
+                <table id="table" data-toggle="table" data-toolbar="#toolbar" data-click-to-select="true"
+                       data-search="true"
+                       data-advanced-search="true" data-filter-control="true" name="table">
+                    <thead>
+                    <tr>
+                        <th data-field="clave" data-sorteable="false" class="column">Clave</th>
+                        <th data-field="nombre" data-sorteable="false" class="column">Nombre</th>
+
+                        {{#each actividades}}
+                            <th data-field="calificaciones.{{@index}}" class="column">{{dataValues.nombre}}
+                                : {{dataValues.valor}}</th>
+                        {{/each}}
+                        <th data-field="califinal" class="column">Calif. Final</th>
+                    </tr>
+                    </thead>
+
+                    <tbody>
+
+                    </tbody>
+                </table>
             </div>
         </div>
         <!-- Contenido de la vista -->
-        <div class="row-cols-1 navbar-nav-scroll">
-            <input type="hidden" id="valorTabla" name="valorTabla" value="{{listaFormateada}}">
 
-            <table id="table" data-toggle="table" data-toolbar="#toolbar" data-click-to-select="true"
-                   data-search="true"
-                   data-advanced-search="true" data-filter-control="true" name="table">
-                <thead>
-                <tr>
-                    <th data-field="clave" data-sorteable="false" class="column">Clave</th>
-                    <th data-field="nombre" data-sorteable="false" class="column">Nombre</th>
-
-                    {{#each actividades}}
-                        <th data-field="calificaciones.{{@index}}" class="column">{{dataValues.nombre}}
-                            : {{dataValues.valor}}</th>
-                    {{/each}}
-                    <th data-field="califinal" class="column">Calif. Final</th>
-                </tr>
-                </thead>
-
-                <tbody>
-
-                </tbody>
-            </table>
-        </div>
     </main>
 </div>
 <script src="/js/llenar-tabla-helper.js"></script>
