Añade pestaña de equipos en la lista de menú

--- a/views/actividad/vista-grupo-actividades.hbs
+++ b/views/actividad/vista-grupo-actividades.hbs
@@ -10,7 +10,7 @@
         </li>
         <li class="nav-item">
             <a class="nav-link" title="Muestra la lista de alumnos que contiene el grupo."
-               href="/grupo/alumnos/{{idgrupo}}"><i class="bi bi-people-fill"></i> Alumnos</a>
+               href="/grupo/alumnos/{{idgrupo}}"><i class="bi bi-file-person-fill"></i> Alumnos</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" title="Muestra la lista de temas/unidades que contiene el grupo."
@@ -25,6 +25,11 @@
             <a class="nav-link " title="Muestra las calificaciones almacenadas."
                href="/grupo/calificaciones/{{idgrupo}}"><i class="bi bi-file-spreadsheet-fill"></i>
                 Calificaciones</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" title="Muestra los equipos existentes."
+               href="/grupo/equipos/{{idgrupo}}"><i class="bi bi-people-fill"></i>
+                Equipos</a>
         </li>
     </ul>
 </div>
