--- a/views/calificacion/vista-grupo-calificaciones.hbs
+++ b/views/calificacion/vista-grupo-calificaciones.hbs
@@ -8,7 +8,7 @@
         </li>
         <li class="nav-item">
             <a class="nav-link" title="Muestra la lista de alumnos que contiene el grupo."
-               href="/grupo/alumnos/{{idgrupo}}"><i class="bi bi-people-fill"></i> Alumnos</a>
+               href="/grupo/alumnos/{{idgrupo}}"><i class="bi bi-file-person-fill"></i> Alumnos</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" title="Muestra la lista de temas/unidades que contiene el grupo."
@@ -23,6 +23,11 @@
             <a class="nav-link active" title="Muestra las calificaciones almacenadas."
                href="/grupo/calificaciones/{{idgrupo}}"><i class="bi bi-file-spreadsheet-fill"></i>
                 Calificaciones</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" title="Muestra los equipos existentes."
+               href="/grupo/equipos/{{idgrupo}}"><i class="bi bi-people-fill"></i>
+                Equipos</a>
         </li>
     </ul>
 </div>
