--- a/views/tema/vista-grupo-temas.hbs
+++ b/views/tema/vista-grupo-temas.hbs
@@ -17,7 +17,7 @@
             <a class="nav-link " aria-current="page" href="/grupo-inicio/{{idgrupo}}"  title="Muestra el progreso general del grupo.">Inicio</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" title="Muestra la lista de alumnos que contiene el grupo." href="/grupo/alumnos/{{idgrupo}}"><i class="bi bi-people-fill" ></i> Alumnos</a>
+            <a class="nav-link" title="Muestra la lista de alumnos que contiene el grupo." href="/grupo/alumnos/{{idgrupo}}"><i class="bi bi-file-person-fill" ></i> Alumnos</a>
         </li>
         <li class="nav-item">
             <a class="nav-link active" title="Muestra la lista de temas/unidades que contiene el grupo." href="/grupo/temas/{{idgrupo}}"><i class="bi bi-book-fill"  ></i> Temas</a>
@@ -30,7 +30,11 @@
             <a class="nav-link " title="Muestra las calificaciones almacenadas." href="/grupo/calificaciones/{{idgrupo}}"><i class="bi bi-file-spreadsheet-fill"  ></i>
                 Calificaciones</a>
         </li>
-
+        <li class="nav-item">
+            <a class="nav-link" title="Muestra los equipos existentes."
+               href="/grupo/equipos/{{idgrupo}}"><i class="bi bi-people-fill"></i>
+                Equipos</a>
+        </li>
     </ul>
     <!-- Titulo de la vista -->
 </div>
