En proceso la mejora de usabilidad del grid, pendiente

--- a/views/actividad/actividad-calificar-individual.hbs
+++ b/views/actividad/actividad-calificar-individual.hbs
@@ -19,7 +19,7 @@
             <input type="hidden" name="_method" value="PUT">
             <input type="hidden" id="valorTabla" name="valorTabla" value="{{listaFormateada}}">
             <div class="col-auto">
-B                <table id="table" class="table" data-toggle="table" data-toolbar="#toolbar" data-click-to-select="false"
+B                <table id="table" class="table table-striped" data-toggle="table" data-toolbar="#toolbar" data-click-to-select="false"
                        data-search="true"
                        data-search-text="" data-filter-control="true" name="table" data-editable="true">
                     <thead>
