--- a/views/equipo/vista-grupo-equipo.hbs
+++ b/views/equipo/vista-grupo-equipo.hbs
@@ -31,6 +31,115 @@
         </li>
     </ul>
 </div>
-<div>
+<div class="row m-2 p-2">
+    <nav id="sideBar" class="col-md-3 col-lg-3 d-md-block bg-light sidebar"
+         role="navigation">
+        <div class="sidebar-sticky pt-3 nav d-flex flex-column navbar-nav-scroll nav-fill">
+            <ul class="list-group  border-bottom h-auto">
+                <li class="list-group-item list-group-item-secondary d-flex justify-content-between align-items-center font-italic font-weight-bold"> Equipos <span class="badge bi bi-people-fill"> </span></li>
+                {{#each equipos}}
+                    <a class="list-group-item list-group-item-action button-sm"
+                       href="/grupo/equipos/{{../idgrupo}}/{{dataValues.id}}">{{dataValues.nombre}}</a>
+                {{/each}}
+                <a class="list-group-item list-group-item-action"
+                   href="/equipo/nuevo/{{idgrupo}}"><i class="bi bi-plus"></i>
+                    Nuevo Equipo</a>
+            </ul>
+        </div>
+    </nav>
+    <div class="col navbar-nav-scroll">
+        <div class="container">
+            {{#if equipo}}
+                <div class="card">
+                    <div class="card-header">
+                        <div class="row">
+                            <div class="col">
+                                <h4>Datos del equipo</h4>
+                            </div>
+                            <div class="col" align="right">
+                                <a class="bi bi-trash-fill" data-toggle="modal"
+                                   data-target="#eliminarEquipoModal"
+                                   title="Eliminar el equipo."></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-body">
+                        <div class="row-cols-1">
+                            <div class="input-group mb-3">
+                                <span class="input-group-text">Nombre</span>
+                                <input type="text" class="form-control" aria-label="Nombre" disabled value="{{equipo.dataValues.nombre}}">
+                            </div>
+                        </div>
+                        <div class="row-cols-1">
+                            <input type="hidden" id="valorTablaTemas" name="valorTablaTemas"
+                                   value="{{listaFormateadaTemas}}">
+                            <table id="tableTemas" data-toggle="table" data-click>
+                                <thead>
+                                <tr>
+                                    <th data-field="numerotema" data-sorteable="false">No. tema</th>
+                                    <th data-field="nombre" data-sorteable="true">Nombre</th>
+                                </tr>
+                                </thead>
+                                <tbody>
 
+                                </tbody>
+                            </table>
+                        </div>
+                        <div class="row-cols-1">
+                            <input type="hidden" id="valorTablaAlumnos" name="valorTablaAlumnos"
+                                   value="{{listaFormateadaAlumnos}}">
+                            <table id="tableAlumnos" data-toggle="table" data-toolbar="#toolbar"
+                                   data-click-to-select="false"
+                                   data-search="true"
+                                   data-advanced-search="true" data-filter-control="true">
+                                <thead>
+                                <tr>
+                                    <th data-field="clave" data-sorteable="false">No. Control</th>
+                                    <th data-field="nombre" data-sorteable="true">Nombre</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+
+                    <form action="#?_method=DELETE" method='POST'>
+                        <input type="hidden" name="_method" value="DELETE">
+                        <div class="modal fade" id="eliminarEquipoModal" tabindex="-1"
+                             aria-labelledby="eliminarEquipoModal"
+                             aria-hidden="true">
+                            <div class="modal-dialog modal-dialog-centered">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="eliminarEquipoModalLabel">Eliminar Equipo</h5>
+                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                            <span aria-hidden="true">&times;</span>
+                                        </button>
+                                    </div>
+                                    <div class="modal-body">
+                                        ¿Está seguro que desea eliminar el equipo?
+                                    </div>
+                                    <div class="modal-footer">
+                                        <a type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</a>
+                                        <button type="submit" class="btn btn-danger">Eliminar</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+
+                </div>
+            {{else}}
+                <div class="jumbotron jumbotron-fluid">
+                    <div class="container text-center">
+                        <h2 class="lead">No existen equipos en este grupo.</h2>
+                    </div>
+                </div>
+            {{/if}}
+        </div>
+
+    </div>
 </div>
+<script src="/js/grid-equipos-helper.js" type="text/javascript"></script>
