--- a/views/actividad/vista-grupo-actividades.hbs
+++ b/views/actividad/vista-grupo-actividades.hbs
@@ -211,7 +211,7 @@
                 <a type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</a>
                 <a type="button" class="btn btn-primary"
                    href="/actividad/calificar-individual/{{idgrupo}}/{{idtema}}/{{actividad.dataValues.id}}">Individual</a>
-                <a type="button" class="btn btn-primary">Por equipo</a>
+                <a data-dismiss="modal" data-toggle="modal" href="#calificarModalEquipo">Por equipo</a>
             </div>
         </div>
     </div>
